# query_csv

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
query_csv/: __init__.py  exceptions.py  main.py  utils.py
test/: test_query_csv.py
test/data/: test.csv
